[package]
name = "ant_bin"
version = "0.1.0"
authors = ["Lukas Saretzki"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
rand = "*"
clipboard = "*"
glium = { version = "0.30", default-features = true }
image = "*"
imgui = "*"
imgui-glium-renderer = "*"
imgui-winit-support = "*"
