[package]
name = "ant_lib"
version = "0.1.0"
authors = ["Lukas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
glium = { version = "0.27", default-features = true }
image = "0.23"
imgui = { path = "../../imgui-rs" }
imgui-glium-renderer = { path = "../../imgui-rs/imgui-glium-renderer" }
imgui-winit-support = { path = "../../imgui-rs/imgui-winit-support" }
rand = "*"