[package]
name = "ant_lib"
version = "0.1.0"
authors = ["Lukas Saretzki"]
edition = "2021"

[lib]
name = "dynlib"
crate-type = ["dylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
rand = "*"
lazy_static = "*"